# duck-darts-pico-python

./: .gitignore  README.md  example.html  main.py  pyproject.toml
lib/: microdot.py  websocket.py
scripts/: install.sh  setup.sh
src/: pin_mappings.py
